--- a/css/main.css
+++ b/css/main.css
@@ -693,6 +693,9 @@ footer{
         height: 50px;
         border-top: 0.5px solid #959595;
     }
+    #itemMenu a{
+        font-size: 36px;
+    }
 
     #itemMenu:before{
         display: none;
